@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.640 2006/04/08 19:46:21 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.641 2006/04/08 21:04:32 codeman Exp $
 
   8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIInstallProfile.py:
@@ -13,6 +13,8 @@
   8 Apr 2006; Preston Cody <codeman@gentoo.org>
   touchups to add_profile in GLIMD to link to webgli
   add a save to GLIMD profile button in webgli's saveprofile
+  gliserv.py:
+  initial attempt at custom networking info per client.  hostname support only.
 
   5 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/html/webgli/partitioning[234].pyhtml:
